# OpenSim-Pymote

./: LICENSE  README.md  README_PYPI.md
addon-modules/: PymoteServer.cs  opensim_pymote.py  prebuild.xml
addon-modules/OpenSim-Pymote/: examples.py  examples_package.py  pymote.py  pyproject.toml
addon-modules/OpenSim-Pymote/Properties/: AssemblyInfo.cs
addon-modules/OpenSim-Pymote/opensim_pymote/: __init__.py  client.py  models.py  parsers.py
