[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensim-pymote"
version = "1.0.0"
description = "Professional Python API for OpenSimulator with structured return values"
readme = "README_PYPI.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "OpenSim-Pymote Team", email = "pymote@opensim.org"}
]
keywords = ["opensim", "opensimulator", "virtual-world", "api", "pymote"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/opensim/opensim-pymote"
Documentation = "https://github.com/opensim/opensim-pymote/blob/main/README.md"
Repository = "https://github.com/opensim/opensim-pymote"
Issues = "https://github.com/opensim/opensim-pymote/issues"

[tool.setuptools]
packages = ["opensim_pymote"]
